--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "demo1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://gorla1.github.io/Product2",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -19,7 +20,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+     "deploy": "gh-pages -d build"
+
   },
   "eslintConfig": {
     "extends": [
@@ -38,8 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.2.3"
   }
 }
